Switch to bun package management

--- a/.github/workflows/gh-pages-build.yml
+++ b/.github/workflows/gh-pages-build.yml
@@ -34,7 +34,8 @@ jobs:
         
       - name: Bun Setup
         uses: oven-sh/setup-bun@v1
-        
+      - name: Bun Install
+        run: bun install
       - name: Bun Build
         run: bun run build
         
